<resources>
    <string name="app_name">TP1</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="this_is_home">This is Home !</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="description">Description</string>
    <string name="valider">Valider</string>
    <string name="titre">Titre</string>
    <string name="ajouter_une_note">Ajouter une note</string>
    <string name="creer_note">Creer note</string>
    <string name="veuillez_indiquer_un_titre">Veuillez indiquer un titre</string>
    <string name="nouvelle_note_sauvegard_e">Nouvelle note sauvegardée !</string>
    <string name="liste_des_utilisateurs">liste des utilisateurs</string>
    <string name="user_avatar">user avatar</string>
    <string name="username">USERNAME HERE</string>
    <string name="todo">TODO</string>
</resources>
