<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="davray.fernandez.tp1.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_saveNote"
            app:destination="@id/saveNote" />
        <action
            android:id="@+id/action_navigation_home_to_navigation_dashboard"
            app:destination="@id/navigation_dashboard" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="davray.fernandez.tp1.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" >
        <action
            android:id="@+id/action_navigation_dashboard_to_userDetail"
            app:destination="@id/userDetail" />
    </fragment>

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="davray.fernandez.tp1.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/saveNote"
        android:name="davray.fernandez.tp1.SaveNote"
        android:label="fragment_save_note"
        tools:layout="@layout/fragment_save_note" />
    <fragment
        android:id="@+id/userDetail"
        android:name="davray.fernandez.tp1.userDetail"
        android:label="fragment_user_detail"
        tools:layout="@layout/fragment_user_detail" />
</navigation>